hw. last questions

--- a/05-deployment/homework-new.ipynb
+++ b/05-deployment/homework-new.ipynb
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "80cdc244-c481-42b4-9a93-9e8e794ad17e",
    "metadata": {},
    "outputs": [],
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "04edd301-be3f-40a5-92ee-25692d7687e5",
    "metadata": {},
    "outputs": [],
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "b3b386f8-c8e1-4702-a71f-dadf262588d6",
    "metadata": {},
    "outputs": [
@@ -110,7 +110,7 @@
        "0.902"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "3ca2822e",
    "metadata": {},
    "outputs": [
@@ -141,7 +141,7 @@
        "{'credit_probability': 0.14}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,6 +151,53 @@
     "url = \"http://127.0.0.1:9696/predict\"\n",
     "client = {\"job\": \"unknown\", \"duration\": 270, \"poutcome\": \"failure\"}\n",
     "requests.post(url, json=client).json()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d7306656",
+   "metadata": {},
+   "source": [
+    "### Question 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "f30cf60f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[sudo] password for mogos: REPOSITORY                       TAG                     IMAGE ID       CREATED         SIZE\n",
+      "zoomcamp-w5                      latest                  ff7aa1b46efb   3 days ago      502MB\n",
+      "<none>                           <none>                  dae967aac77c   3 days ago      502MB\n",
+      "svizor/zoomcamp-model            3.10.12-slim            08266c8f0c4b   7 days ago      147MB\n",
+      "ddd.frontdesk.blazor             latest                  cff858788360   9 months ago    279MB\n",
+      "ddd.clinicmanagement.blazor      latest                  fecf8cb95489   9 months ago    263MB\n",
+      "ddd.clinicmanagement.api         latest                  4599126d216c   9 months ago    253MB\n",
+      "ddd.frontdesk.api                latest                  5b825c423f6c   9 months ago    257MB\n",
+      "ddd.vet-clinic-public            latest                  455d72f02260   9 months ago    212MB\n",
+      "<none>                           <none>                  e085f18ae971   9 months ago    185MB\n",
+      "rabbitmq                         3-management-alpine     66965248a9cb   10 months ago   175MB\n",
+      "python                           3.8.12-slim             513da2530098   19 months ago   122MB\n",
+      "mcr.microsoft.com/mssql/server   2019-CU3-ubuntu-18.04   3c7ee124fdd6   3 years ago     1.46GB\n",
+      "jijiechen/papercut               latest                  e836d784481e   5 years ago     249MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "!sudo -S docker images < ~/password.txt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8870baed",
+   "metadata": {},
+   "source": [
+    "Answer: 147 MB"
    ]
   }
  ],
