--- a/07-project/notebook.ipynb
+++ b/07-project/notebook.ipynb
@@ -9,9 +9,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'mlzoomcamp-ubuntu-3.11.4' requires the ipykernel package.\n",
+      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
+      "\u001b[1;31mCommand: 'conda install -n mlzoomcamp-ubuntu-3.11.4 ipykernel --update-deps --force-reinstall'"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np"
@@ -1105,7 +1116,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f429a141590>"
+       "<matplotlib.legend.Legend at 0x7fd869fdead0>"
       ]
      },
      "execution_count": 48,
@@ -1211,58 +1222,58 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 29%|██▊       | 2/7 [00:02<00:04,  1.10it/s]"
+      " 14%|█▍        | 1/7 [00:01<00:07,  1.21s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "C=0.001 0.894 +- 0.035\n",
-      "C=0.01 0.891 +- 0.034\n"
+      "C=0.001 0.894 +- 0.035\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 57%|█████▋    | 4/7 [00:02<00:01,  2.46it/s]"
+      " 43%|████▎     | 3/7 [00:01<00:01,  2.44it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "C=0.1 0.931 +- 0.034\n",
-      "C=0.5 0.924 +- 0.049\n"
+      "C=0.01 0.891 +- 0.034\n",
+      "C=0.1 0.931 +- 0.034\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 86%|████████▌ | 6/7 [00:02<00:00,  3.71it/s]"
+      " 71%|███████▏  | 5/7 [00:01<00:00,  4.05it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "C=1 0.949 +- 0.015\n",
-      "C=5 0.937 +- 0.026\n"
+      "C=0.5 0.924 +- 0.049\n",
+      "C=1 0.949 +- 0.015\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 7/7 [00:02<00:00,  2.35it/s]"
+      "100%|██████████| 7/7 [00:02<00:00,  3.18it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "C=5 0.937 +- 0.026\n",
       "C=10 0.939 +- 0.031\n"
      ]
     },
@@ -1752,7 +1763,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f42982ab610>]"
+       "[<matplotlib.lines.Line2D at 0x7fd865ec4810>]"
       ]
      },
      "execution_count": 71,
@@ -1813,7 +1824,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f4293f46150>"
+       "<matplotlib.legend.Legend at 0x7fd865b6e3d0>"
       ]
      },
      "execution_count": 74,
@@ -1890,7 +1901,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f4293e05750>"
+       "<matplotlib.legend.Legend at 0x7fd865c31b90>"
       ]
      },
      "execution_count": 78,
@@ -2260,7 +2271,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f427b15e510>"
+       "<matplotlib.legend.Legend at 0x7fd865bbe3d0>"
       ]
      },
      "execution_count": 92,
@@ -2292,7 +2303,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f427b1c6150>"
+       "<matplotlib.legend.Legend at 0x7fd865a48910>"
       ]
      },
      "execution_count": 93,
@@ -2437,7 +2448,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f427b186150>"
+       "<matplotlib.legend.Legend at 0x7fd8645470d0>"
       ]
      },
      "execution_count": 100,
@@ -2528,7 +2539,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f427adb0f90>"
+       "<matplotlib.legend.Legend at 0x7fd8645e6ad0>"
       ]
      },
      "execution_count": 104,
@@ -2667,7 +2678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -2676,7 +2687,7 @@
        "0.9415217391304348"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2693,11 +2704,157 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Save the model"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import joblib"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 190,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['dv.bin']"
+      ]
+     },
+     "execution_count": 190,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "joblib.dump(rf, 'model.bin')\n",
+    "joblib.dump(dv, 'dv.bin')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 191,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model1 = joblib.load('model.bin')\n",
+    "dv1 = joblib.load('dv.bin')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 193,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'occupation': 'engineer',\n",
+       " 'monthly_income': 60000,\n",
+       " 'credit_score': 800.0,\n",
+       " 'years_of_employment': 8,\n",
+       " 'finance_status': 'good',\n",
+       " 'finance_history': 'no_issues',\n",
+       " 'number_of_children': 1}"
+      ]
+     },
+     "execution_count": 193,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "customer = df_test.iloc[0].to_dict()\n",
+    "customer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 194,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'occupation': 'engineer',\n",
+       " 'monthly_income': 4500,\n",
+       " 'credit_score': 250,\n",
+       " 'years_of_employment': 5,\n",
+       " 'finance_status': 'good',\n",
+       " 'finance_history': 'no_issues',\n",
+       " 'number_of_children': 1}"
+      ]
+     },
+     "execution_count": 194,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "customer['monthly_income'] = 4500\n",
+    "customer['years_of_employment'] = 5\n",
+    "customer['credit_score'] = 250\n",
+    "customer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 195,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = dv1.transform([customer])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 196,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.568623027170458"
+      ]
+     },
+     "execution_count": 196,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Y = model1.predict_proba(X)[0,1]\n",
+    "Y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 198,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 198,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "int(Y >= 0.5)"
+   ]
   }
  ],
  "metadata": {
