--- a/08-deep-learning/homework.ipynb
+++ b/08-deep-learning/homework.ipynb
@@ -25,7 +25,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-11-09 00:32:15.056670: I tensorflow/core/util/util.cc:169] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n"
+      "2023-11-09 01:11:23.745352: I tensorflow/core/util/util.cc:169] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n"
      ]
     }
    ],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2023-11-09T00:29:34.710804Z",
@@ -49,6 +49,15 @@
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-11-09 01:11:32.875294: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-11-09 01:11:32.883936: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-11-09 01:11:32.884345: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -56,12 +65,12 @@
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " input_6 (InputLayer)        [(None, 150, 150, 3)]     0         \n",
+      " input_1 (InputLayer)        [(None, 150, 150, 3)]     0         \n",
       "                                                                 \n",
-      " conv2d_5 (Conv2D)           (None, 148, 148, 32)      896       \n",
+      " conv2d (Conv2D)             (None, 148, 148, 32)      896       \n",
       "                                                                 \n",
-      " max_pooling2d_5 (MaxPooling  (None, 74, 74, 32)       0         \n",
-      " 2D)                                                             \n",
+      " max_pooling2d (MaxPooling2D  (None, 74, 74, 32)       0         \n",
+      " )                                                               \n",
       "                                                                 \n",
       " flatten (Flatten)           (None, 175232)            0         \n",
       "                                                                 \n",
@@ -80,6 +89,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "2023-11-09 01:11:32.885991: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 AVX512F AVX512_VNNI FMA\n",
+      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2023-11-09 01:11:32.886409: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-11-09 01:11:32.886663: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-11-09 01:11:32.886904: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-11-09 01:11:33.529978: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-11-09 01:11:33.530231: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-11-09 01:11:33.530418: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-11-09 01:11:33.530578: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1532] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 13794 MB memory:  -> device: 0, name: Tesla T4, pci bus id: 0000:00:1e.0, compute capability: 7.5\n",
       "/opt/saturncloud/envs/saturn/lib/python3.9/site-packages/keras/optimizers/optimizer_v2/gradient_descent.py:108: UserWarning: The `lr` argument is deprecated, use `learning_rate` instead.\n",
       "  super(SGD, self).__init__(name, **kwargs)\n"
      ]
@@ -129,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -193,20 +211,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'scipy' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/home/jovyan/workspace/mlzoomcamp2023/08-deep-learning/homework.ipynb Cell 11\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell://ssh-remote%2Bssh.community.saturnenterprise.io/home/jovyan/workspace/mlzoomcamp2023/08-deep-learning/homework.ipynb#X15sdnNjb2RlLXJlbW90ZQ%3D%3D?line=0'>1</a>\u001b[0m history \u001b[39m=\u001b[39m model\u001b[39m.\u001b[39;49mfit(\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2Bssh.community.saturnenterprise.io/home/jovyan/workspace/mlzoomcamp2023/08-deep-learning/homework.ipynb#X15sdnNjb2RlLXJlbW90ZQ%3D%3D?line=1'>2</a>\u001b[0m     train_ds,\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2Bssh.community.saturnenterprise.io/home/jovyan/workspace/mlzoomcamp2023/08-deep-learning/homework.ipynb#X15sdnNjb2RlLXJlbW90ZQ%3D%3D?line=2'>3</a>\u001b[0m     epochs\u001b[39m=\u001b[39;49m\u001b[39m10\u001b[39;49m,\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2Bssh.community.saturnenterprise.io/home/jovyan/workspace/mlzoomcamp2023/08-deep-learning/homework.ipynb#X15sdnNjb2RlLXJlbW90ZQ%3D%3D?line=3'>4</a>\u001b[0m     validation_data\u001b[39m=\u001b[39;49mval_ds\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2Bssh.community.saturnenterprise.io/home/jovyan/workspace/mlzoomcamp2023/08-deep-learning/homework.ipynb#X15sdnNjb2RlLXJlbW90ZQ%3D%3D?line=4'>5</a>\u001b[0m )\n",
-      "File \u001b[0;32m/opt/saturncloud/envs/saturn/lib/python3.9/site-packages/keras/utils/traceback_utils.py:67\u001b[0m, in \u001b[0;36mfilter_traceback.<locals>.error_handler\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m     65\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mException\u001b[39;00m \u001b[39mas\u001b[39;00m e:  \u001b[39m# pylint: disable=broad-except\u001b[39;00m\n\u001b[1;32m     66\u001b[0m   filtered_tb \u001b[39m=\u001b[39m _process_traceback_frames(e\u001b[39m.\u001b[39m__traceback__)\n\u001b[0;32m---> 67\u001b[0m   \u001b[39mraise\u001b[39;00m e\u001b[39m.\u001b[39mwith_traceback(filtered_tb) \u001b[39mfrom\u001b[39;00m \u001b[39mNone\u001b[39;00m\n\u001b[1;32m     68\u001b[0m \u001b[39mfinally\u001b[39;00m:\n\u001b[1;32m     69\u001b[0m   \u001b[39mdel\u001b[39;00m filtered_tb\n",
-      "File \u001b[0;32m/opt/saturncloud/envs/saturn/lib/python3.9/site-packages/keras/preprocessing/image.py:2244\u001b[0m, in \u001b[0;36mapply_affine_transform\u001b[0;34m(x, theta, tx, ty, shear, zx, zy, row_axis, col_axis, channel_axis, fill_mode, cval, order)\u001b[0m\n\u001b[1;32m   2212\u001b[0m \u001b[39m@keras_export\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mkeras.preprocessing.image.apply_affine_transform\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m   2213\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mapply_affine_transform\u001b[39m(x, theta\u001b[39m=\u001b[39m\u001b[39m0\u001b[39m, tx\u001b[39m=\u001b[39m\u001b[39m0\u001b[39m, ty\u001b[39m=\u001b[39m\u001b[39m0\u001b[39m, shear\u001b[39m=\u001b[39m\u001b[39m0\u001b[39m, zx\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m, zy\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m,\n\u001b[1;32m   2214\u001b[0m                            row_axis\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m, col_axis\u001b[39m=\u001b[39m\u001b[39m2\u001b[39m, channel_axis\u001b[39m=\u001b[39m\u001b[39m0\u001b[39m,\n\u001b[1;32m   2215\u001b[0m                            fill_mode\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mnearest\u001b[39m\u001b[39m'\u001b[39m, cval\u001b[39m=\u001b[39m\u001b[39m0.\u001b[39m, order\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m):\n\u001b[1;32m   2216\u001b[0m \u001b[39m  \u001b[39m\u001b[39m\"\"\"Applies an affine transformation specified by the parameters given.\u001b[39;00m\n\u001b[1;32m   2217\u001b[0m \n\u001b[1;32m   2218\u001b[0m \u001b[39m  Args:\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m   2242\u001b[0m \u001b[39m      ImportError: if SciPy is not available.\u001b[39;00m\n\u001b[1;32m   2243\u001b[0m \u001b[39m  \"\"\"\u001b[39;00m\n\u001b[0;32m-> 2244\u001b[0m   \u001b[39mif\u001b[39;00m scipy \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m   2245\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mImportError\u001b[39;00m(\u001b[39m'\u001b[39m\u001b[39mImage transformations require SciPy. \u001b[39m\u001b[39m'\u001b[39m\n\u001b[1;32m   2246\u001b[0m                       \u001b[39m'\u001b[39m\u001b[39mInstall SciPy.\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m   2248\u001b[0m   \u001b[39m# Input sanity checks:\u001b[39;00m\n\u001b[1;32m   2249\u001b[0m   \u001b[39m# 1. x must 2D image with one or more channels (i.e., a 3D tensor)\u001b[39;00m\n\u001b[1;32m   2250\u001b[0m   \u001b[39m# 2. channels must be either first or last dimension\u001b[39;00m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'scipy' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-11-09 01:11:49.514170: I tensorflow/stream_executor/cuda/cuda_dnn.cc:384] Loaded cuDNN version 8100\n",
+      "2023-11-09 01:11:50.168867: I tensorflow/core/platform/default/subprocess.cc:304] Start cannot spawn child process: No such file or directory\n",
+      "2023-11-09 01:11:50.169975: I tensorflow/core/platform/default/subprocess.cc:304] Start cannot spawn child process: No such file or directory\n",
+      "2023-11-09 01:11:50.170015: W tensorflow/stream_executor/gpu/asm_compiler.cc:80] Couldn't get ptxas version string: INTERNAL: Couldn't invoke ptxas --version\n",
+      "2023-11-09 01:11:50.171113: I tensorflow/core/platform/default/subprocess.cc:304] Start cannot spawn child process: No such file or directory\n",
+      "2023-11-09 01:11:50.171201: W tensorflow/stream_executor/gpu/redzone_allocator.cc:314] INTERNAL: Failed to launch ptxas\n",
+      "Relying on driver to perform ptx compilation. \n",
+      "Modify $PATH to customize ptxas location.\n",
+      "This message will be only logged once.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "184/184 [==============================] - 15s 66ms/step - loss: 0.6888 - accuracy: 0.5356 - val_loss: 0.6547 - val_accuracy: 0.5490\n",
+      "Epoch 2/10\n",
+      "184/184 [==============================] - 9s 50ms/step - loss: 0.6578 - accuracy: 0.5865 - val_loss: 0.6181 - val_accuracy: 0.6318\n",
+      "Epoch 3/10\n",
+      "184/184 [==============================] - 9s 50ms/step - loss: 0.6212 - accuracy: 0.6444 - val_loss: 0.6142 - val_accuracy: 0.6438\n",
+      "Epoch 4/10\n",
+      "184/184 [==============================] - 9s 49ms/step - loss: 0.5805 - accuracy: 0.6971 - val_loss: 0.5538 - val_accuracy: 0.7102\n",
+      "Epoch 5/10\n",
+      "184/184 [==============================] - 9s 48ms/step - loss: 0.5400 - accuracy: 0.7384 - val_loss: 0.5690 - val_accuracy: 0.7048\n",
+      "Epoch 6/10\n",
+      "184/184 [==============================] - 9s 49ms/step - loss: 0.5131 - accuracy: 0.7632 - val_loss: 0.5420 - val_accuracy: 0.7451\n",
+      "Epoch 7/10\n",
+      "184/184 [==============================] - 9s 49ms/step - loss: 0.4920 - accuracy: 0.7716 - val_loss: 0.5092 - val_accuracy: 0.7723\n",
+      "Epoch 8/10\n",
+      "184/184 [==============================] - 9s 50ms/step - loss: 0.4691 - accuracy: 0.7898 - val_loss: 0.5108 - val_accuracy: 0.7603\n",
+      "Epoch 9/10\n",
+      "184/184 [==============================] - 9s 49ms/step - loss: 0.4424 - accuracy: 0.8108 - val_loss: 0.4959 - val_accuracy: 0.7810\n",
+      "Epoch 10/10\n",
+      "184/184 [==============================] - 9s 50ms/step - loss: 0.4193 - accuracy: 0.8189 - val_loss: 0.5124 - val_accuracy: 0.7647\n"
      ]
     }
    ],
@@ -216,6 +268,79 @@
     "    epochs=10,\n",
     "    validation_data=val_ds\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7508156597614288"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.median(history.history['accuracy'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Answer 0.80"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Question 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.08735821451640613"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.std(history.history['loss'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Answer 0.31"
    ]
   }
  ],
