--- a/08-deep-learning/homework.ipynb
+++ b/08-deep-learning/homework.ipynb
@@ -12,11 +12,11 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-11-09T00:10:25.866379Z",
-     "iopub.status.busy": "2023-11-09T00:10:25.866190Z",
-     "iopub.status.idle": "2023-11-09T00:10:27.681267Z",
-     "shell.execute_reply": "2023-11-09T00:10:27.680564Z",
-     "shell.execute_reply.started": "2023-11-09T00:10:25.866359Z"
+     "iopub.execute_input": "2023-11-09T01:34:56.491116Z",
+     "iopub.status.busy": "2023-11-09T01:34:56.490750Z",
+     "iopub.status.idle": "2023-11-09T01:34:58.358623Z",
+     "shell.execute_reply": "2023-11-09T01:34:58.358012Z",
+     "shell.execute_reply.started": "2023-11-09T01:34:56.491085Z"
     },
     "tags": []
    },
@@ -25,7 +25,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-11-09 01:11:23.745352: I tensorflow/core/util/util.cc:169] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n"
+      "2023-11-09 18:29:56.923461: I tensorflow/core/util/util.cc:169] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n"
      ]
     }
    ],
@@ -36,47 +36,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-11-09T00:29:34.710804Z",
-     "iopub.status.busy": "2023-11-09T00:29:34.710408Z",
-     "iopub.status.idle": "2023-11-09T00:29:34.719279Z",
-     "shell.execute_reply": "2023-11-09T00:29:34.718393Z",
-     "shell.execute_reply.started": "2023-11-09T00:29:34.710777Z"
+     "iopub.execute_input": "2023-11-09T01:34:58.360235Z",
+     "iopub.status.busy": "2023-11-09T01:34:58.359671Z",
+     "iopub.status.idle": "2023-11-09T01:34:59.383923Z",
+     "shell.execute_reply": "2023-11-09T01:34:59.383134Z",
+     "shell.execute_reply.started": "2023-11-09T01:34:58.360202Z"
     },
     "tags": []
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-11-09 01:11:32.875294: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2023-11-09 01:11:32.883936: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2023-11-09 01:11:32.884345: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"model\"\n",
+      "Model: \"sequential_1\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " input_1 (InputLayer)        [(None, 150, 150, 3)]     0         \n",
+      " conv2d_1 (Conv2D)           (None, 148, 148, 32)      896       \n",
       "                                                                 \n",
-      " conv2d (Conv2D)             (None, 148, 148, 32)      896       \n",
+      " max_pooling2d_1 (MaxPooling  (None, 74, 74, 32)       0         \n",
+      " 2D)                                                             \n",
       "                                                                 \n",
-      " max_pooling2d (MaxPooling2D  (None, 74, 74, 32)       0         \n",
-      " )                                                               \n",
+      " flatten_1 (Flatten)         (None, 175232)            0         \n",
       "                                                                 \n",
-      " flatten (Flatten)           (None, 175232)            0         \n",
+      " dense_2 (Dense)             (None, 64)                11214912  \n",
       "                                                                 \n",
-      " dense (Dense)               (None, 64)                11214912  \n",
-      "                                                                 \n",
-      " dense_1 (Dense)             (None, 1)                 65        \n",
+      " dense_3 (Dense)             (None, 1)                 65        \n",
       "                                                                 \n",
       "=================================================================\n",
       "Total params: 11,215,873\n",
@@ -84,36 +73,18 @@
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-11-09 01:11:32.885991: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 AVX512F AVX512_VNNI FMA\n",
-      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2023-11-09 01:11:32.886409: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2023-11-09 01:11:32.886663: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2023-11-09 01:11:32.886904: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2023-11-09 01:11:33.529978: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2023-11-09 01:11:33.530231: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2023-11-09 01:11:33.530418: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2023-11-09 01:11:33.530578: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1532] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 13794 MB memory:  -> device: 0, name: Tesla T4, pci bus id: 0000:00:1e.0, compute capability: 7.5\n",
-      "/opt/saturncloud/envs/saturn/lib/python3.9/site-packages/keras/optimizers/optimizer_v2/gradient_descent.py:108: UserWarning: The `lr` argument is deprecated, use `learning_rate` instead.\n",
-      "  super(SGD, self).__init__(name, **kwargs)\n"
-     ]
     }
    ],
    "source": [
-    "inputs = keras.Input(shape=(150, 150, 3))\n",
-    "convLayer = keras.layers.Conv2D(filters=32, kernel_size=(3, 3), activation='relu')(inputs)\n",
-    "max_pool_2d = keras.layers.MaxPooling2D(pool_size=(2, 2))(convLayer)\n",
-    "flatten = keras.layers.Flatten()(max_pool_2d)\n",
-    "dense = keras.layers.Dense(64, activation='relu')(flatten)\n",
-    "outputs = keras.layers.Dense(1, activation='sigmoid')(dense)\n",
+    "model = tf.keras.models.Sequential([\n",
+    "    keras.layers.Conv2D(filters=32, kernel_size=(3, 3), activation='relu', input_shape=(150, 150, 3)),\n",
+    "    keras.layers.MaxPooling2D(pool_size=(2, 2)),\n",
+    "    keras.layers.Flatten(),\n",
+    "    keras.layers.Dense(64, activation='relu'),\n",
+    "    keras.layers.Dense(1, activation='sigmoid')\n",
+    "])\n",
     "\n",
-    "model = keras.Model(inputs, outputs)\n",
-    "\n",
-    "optimizer = keras.optimizers.SGD(lr=0.002, momentum=0.8)\n",
+    "optimizer = keras.optimizers.SGD(learning_rate=0.002, momentum=0.8)\n",
     "loss = keras.losses.BinaryCrossentropy()\n",
     "\n",
     "model.compile(optimizer=optimizer, loss=loss, metrics=['accuracy'])\n",
@@ -148,7 +119,15 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-11-09T01:34:59.386745Z",
+     "iopub.status.busy": "2023-11-09T01:34:59.386172Z",
+     "iopub.status.idle": "2023-11-09T01:34:59.391507Z",
+     "shell.execute_reply": "2023-11-09T01:34:59.390736Z",
+     "shell.execute_reply.started": "2023-11-09T01:34:59.386690Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n"
@@ -157,7 +136,15 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-11-09T01:34:59.393185Z",
+     "iopub.status.busy": "2023-11-09T01:34:59.392614Z",
+     "iopub.status.idle": "2023-11-09T01:34:59.396618Z",
+     "shell.execute_reply": "2023-11-09T01:34:59.395825Z",
+     "shell.execute_reply.started": "2023-11-09T01:34:59.393140Z"
+    }
+   },
    "outputs": [],
    "source": [
     "image_gen = ImageDataGenerator(rescale=1./255)"
@@ -166,7 +153,15 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-11-09T01:34:59.397738Z",
+     "iopub.status.busy": "2023-11-09T01:34:59.397416Z",
+     "iopub.status.idle": "2023-11-09T01:34:59.507588Z",
+     "shell.execute_reply": "2023-11-09T01:34:59.506863Z",
+     "shell.execute_reply.started": "2023-11-09T01:34:59.397694Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -189,7 +184,15 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-11-09T01:34:59.509054Z",
+     "iopub.status.busy": "2023-11-09T01:34:59.508695Z",
+     "iopub.status.idle": "2023-11-09T01:34:59.537395Z",
+     "shell.execute_reply": "2023-11-09T01:34:59.536649Z",
+     "shell.execute_reply.started": "2023-11-09T01:34:59.509022Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -211,8 +214,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 12,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-11-09T01:34:59.538460Z",
+     "iopub.status.busy": "2023-11-09T01:34:59.538149Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -222,43 +230,28 @@
      ]
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-11-09 01:11:49.514170: I tensorflow/stream_executor/cuda/cuda_dnn.cc:384] Loaded cuDNN version 8100\n",
-      "2023-11-09 01:11:50.168867: I tensorflow/core/platform/default/subprocess.cc:304] Start cannot spawn child process: No such file or directory\n",
-      "2023-11-09 01:11:50.169975: I tensorflow/core/platform/default/subprocess.cc:304] Start cannot spawn child process: No such file or directory\n",
-      "2023-11-09 01:11:50.170015: W tensorflow/stream_executor/gpu/asm_compiler.cc:80] Couldn't get ptxas version string: INTERNAL: Couldn't invoke ptxas --version\n",
-      "2023-11-09 01:11:50.171113: I tensorflow/core/platform/default/subprocess.cc:304] Start cannot spawn child process: No such file or directory\n",
-      "2023-11-09 01:11:50.171201: W tensorflow/stream_executor/gpu/redzone_allocator.cc:314] INTERNAL: Failed to launch ptxas\n",
-      "Relying on driver to perform ptx compilation. \n",
-      "Modify $PATH to customize ptxas location.\n",
-      "This message will be only logged once.\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "184/184 [==============================] - 15s 66ms/step - loss: 0.6888 - accuracy: 0.5356 - val_loss: 0.6547 - val_accuracy: 0.5490\n",
+      "184/184 [==============================] - 9s 49ms/step - loss: 0.6858 - accuracy: 0.5424 - val_loss: 0.6463 - val_accuracy: 0.6612\n",
       "Epoch 2/10\n",
-      "184/184 [==============================] - 9s 50ms/step - loss: 0.6578 - accuracy: 0.5865 - val_loss: 0.6181 - val_accuracy: 0.6318\n",
+      "184/184 [==============================] - 9s 49ms/step - loss: 0.6334 - accuracy: 0.6351 - val_loss: 0.5861 - val_accuracy: 0.6972\n",
       "Epoch 3/10\n",
-      "184/184 [==============================] - 9s 50ms/step - loss: 0.6212 - accuracy: 0.6444 - val_loss: 0.6142 - val_accuracy: 0.6438\n",
+      "184/184 [==============================] - 9s 48ms/step - loss: 0.5714 - accuracy: 0.7085 - val_loss: 0.5632 - val_accuracy: 0.7418\n",
       "Epoch 4/10\n",
-      "184/184 [==============================] - 9s 49ms/step - loss: 0.5805 - accuracy: 0.6971 - val_loss: 0.5538 - val_accuracy: 0.7102\n",
+      "184/184 [==============================] - 9s 49ms/step - loss: 0.5320 - accuracy: 0.7442 - val_loss: 0.5366 - val_accuracy: 0.7255\n",
       "Epoch 5/10\n",
-      "184/184 [==============================] - 9s 48ms/step - loss: 0.5400 - accuracy: 0.7384 - val_loss: 0.5690 - val_accuracy: 0.7048\n",
+      "184/184 [==============================] - 9s 49ms/step - loss: 0.4994 - accuracy: 0.7730 - val_loss: 0.5483 - val_accuracy: 0.7048\n",
       "Epoch 6/10\n",
-      "184/184 [==============================] - 9s 49ms/step - loss: 0.5131 - accuracy: 0.7632 - val_loss: 0.5420 - val_accuracy: 0.7451\n",
+      "184/184 [==============================] - 9s 48ms/step - loss: 0.4724 - accuracy: 0.7836 - val_loss: 0.5143 - val_accuracy: 0.7527\n",
       "Epoch 7/10\n",
-      "184/184 [==============================] - 9s 49ms/step - loss: 0.4920 - accuracy: 0.7716 - val_loss: 0.5092 - val_accuracy: 0.7723\n",
+      "184/184 [==============================] - 9s 49ms/step - loss: 0.4531 - accuracy: 0.8026 - val_loss: 0.5024 - val_accuracy: 0.7560\n",
       "Epoch 8/10\n",
-      "184/184 [==============================] - 9s 50ms/step - loss: 0.4691 - accuracy: 0.7898 - val_loss: 0.5108 - val_accuracy: 0.7603\n",
+      "184/184 [==============================] - 9s 49ms/step - loss: 0.4291 - accuracy: 0.8189 - val_loss: 0.5299 - val_accuracy: 0.7331\n",
       "Epoch 9/10\n",
-      "184/184 [==============================] - 9s 49ms/step - loss: 0.4424 - accuracy: 0.8108 - val_loss: 0.4959 - val_accuracy: 0.7810\n",
+      "184/184 [==============================] - 9s 50ms/step - loss: 0.3937 - accuracy: 0.8369 - val_loss: 0.4944 - val_accuracy: 0.7647\n",
       "Epoch 10/10\n",
-      "184/184 [==============================] - 9s 50ms/step - loss: 0.4193 - accuracy: 0.8189 - val_loss: 0.5124 - val_accuracy: 0.7647\n"
+      "184/184 [==============================] - 9s 48ms/step - loss: 0.3749 - accuracy: 0.8494 - val_loss: 0.5041 - val_accuracy: 0.7571\n"
      ]
     }
    ],
@@ -272,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,16 +277,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.7508156597614288"
+       "0.7782762348651886"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -318,16 +311,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.08735821451640613"
+       "0.09654021486124015"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
